--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
         <dependency>
             <groupId>com.jkojote</groupId>
             <artifactId>library</artifactId>
-            <version>1.3</version>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
